istiofiles for app/app-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-vs
  namespace: test-app-ns
spec:
  hosts:
  - "artifactory-01.dev-boschdevcloud.com"
  gateways:
  - istio-internal-gateway
  http:
    - fault:
        abort:
          httpStatus: 500
          percentage:
            value: 30
      match:
      - headers:
          end-user:
            exact: vishnu
      route:
        - destination:
            host: test-app-svc.test-app-ns.svc.cluster.local
            subset: v2
    - route:
        - destination:
            host: test-app-svc.test-app-ns.svc.cluster.local
            subset: v1
          weight: 80
      retries:
       attempts: 3
       perTryTimeout: 20s




### working config
#apiVersion: networking.istio.io/v1alpha3
#kind: VirtualService
#metadata:
#  name: istio-vs
#  namespace: test-app-ns
#spec:
#  hosts:
#  - "artifactory-01.dev-boschdevcloud.com"
#  gateways:
#  - istio-internal-gateway
#  http:
#    - route:
#        - destination:
#            host: test-app-svc.test-app-ns.svc.cluster.local
#            subset: v1
#          weight: 20
#        - destination:
#            host: test-app-svc.test-app-ns.svc.cluster.local
#            subset: v2
#          weight: 80
#
